--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,8 @@ form {
 }
 footer {
   background-color: #5169a7;
+  width: 100%;
+  height: 10rem;
 }
 div {
   padding-bottom: 0.5rem;
@@ -55,4 +57,13 @@ span {
 }
 p {
   padding-inline-end: 2rem;
+}
+article div:first-child {
+  text-align: start;
+}
+article div ol li:hover {
+  color: orangered;
+}
+article p {
+  text-align: center;
 }
